<resources>

    <string name="blank" />
    <string name="app_name">Explorer</string>
    <string name="title_activity_detect">检测</string>
    <string name="title_activity_calibrate">校准</string>
    <string name="title_activity_history">历史记录</string>
    <string name="title_activity_settings">设置</string>
    <!--launchActivity-->
    <string name="launch_content">Enpromi Explorer</string>
    <string name="copy_right">Copyright © Enpromi. All Right Reserved.</string>
    <!--loginActivity-->
    <string name="username_hint">登录账号</string>
    <string name="password_hint">登录密码</string>
    <string name="save_username_pwd">自动登录</string>
    <string name="login_button_string">登录</string>
    <string name="login_without_user">离线使用</string>
    <!--mainActivity-->
    <string name="main_detect">检测</string>
    <string name="main_calibrate">校准</string>
    <string name="main_history">历史</string>
    <string name="main_settings">设置</string>
    <!--detectActivity-->
    <string name="videoIp">视频地址</string>
    <string name="videoStart">播放</string>
    <string name="videoStop">停止</string>
    <string name="startRecord">录制</string>
    <string name="stopRecord">停录</string>
    <string name="uploadVideo">上传</string>
    <string name="watermark">水印</string>
    <string name="detect_connect">连接</string>
    <string name="detect_disconnect">断开</string>
    <string name="detect_fire">点火</string>
    <string name="detect_fire_2">点火2</string>
    <string name="detect_ceasefire">关火</string>
    <string name="detect_record">记录</string>
    <string name="detect_disconnected">蓝牙连接已断开</string>
    <string name="detect_series">工作曲线</string>
    <string name="detect_select_series">选择工作曲线</string>
    <string name="detect_factor">响应因子</string>
    <string name="detect_value">检测值:</string>
    <string name="detect_value_unit_ppm">单位：ppm</string>
    <string name="detect_value_unit_mg">单位：mg/m3</string>
    <string name="max_value">最大值:</string>
    <string name="detect_device_param">仪器参数</string>
    <string name="detect_current_trend">当前趋势</string>
    <string name="detect_param_power">电量：</string>
    <string name="detect_param_hydrogen">氢气量：</string>
    <string name="detect_param_vol">电压：</string>
    <string name="detect_param_hydrogen_press">氢气压力：</string>
    <string name="detect_param_pump">泵功率：</string>
    <string name="detect_param_cc_temp">燃烧室温度：</string>
    <string name="detect_param_discharge_press">排出压力：</string>
    <string name="detect_param_fire_temp">火焰温度：</string>
    <string name="detect_param_outlet_hydrogen_press">出口氢气压力：</string>
    <string name="detect_param_micro_current">微电流：</string>
    <string name="detect_param_system_current">系统电流：</string>
    <string name="curve">曲线：</string>
    <string name="name">名称：</string>
    <string name="search">搜索</string>
    <string name="ckb_no">无响应因子</string>
    <string name="pause_video">视频已暂停</string>
    <!--deviceActivity-->
    <string name="paired_devices">已配对设备</string>
    <string name="other_devices">其他可见设备</string>
    <string name="none_found">未发现设备</string>
    <string name="none_paired">没有已匹配的设备</string>
    <string name="other">其他</string>
    <string name="select_device">选择一个设备连接</string>
    <!--calibrateActivity-->
    <string name="cali_series">工作曲线</string>
    <string name="cali_current_signal">当前信号</string>
    <string name="cali_current_ppm">当前浓度</string>
    <string name="cali_gas_1">标气1</string>
    <string name="cali_gas_2">标气2</string>
    <string name="cali_gas_3">标气3</string>
    <string name="cali_gas_4">标气4</string>
    <string name="cali_gas_5">标气5</string>
    <string name="cali_gas_6">标气6</string>
    <string name="cali_cali_1">校准1</string>
    <string name="cali_cali_2">校准2</string>
    <string name="cali_cali_3">校准3</string>
    <string name="cali_cali_4">校准4</string>
    <string name="cali_cali_5">校准5</string>
    <string name="cali_cali_6">校准6</string>
    <string name="cali_to_detect">进入检测</string>
    <!--historyActivity-->
    <string name="date">日期：</string>
    <string name="export">导出</string>
    <string name="min_value">最小值:</string>
    <string name="avg_value">平均值:</string>
    <string name="number">序号</string>
    <string name="history_detect_value">检测值</string>
    <string name="detect_time">检测时间</string>
    <!--deviceActivity-->
    <string name="device_bluetooth">蓝牙设备</string>
    <string name="device_search">搜索</string>
    <!--leakMapActivity-->
    <string name="select_leak">选择漏点</string>
    <string name="confirm">确认</string>
    <string name="add_new">新增</string>
    <string name="leak_point">检测点：</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>

    <string name="leak_name">漏点名称</string>
    <string name="leak_code">漏点编号</string>
    <string name="leak_period">巡检周期</string>
    <string name="leak_period_unit">天</string>
    <string name="leak_position">漏点坐标：</string>

    <!--settingsActivity-->
    <string name="settings_general">通用设置</string>
    <string name="settings_general_remember">记住密码</string>
    <string name="settings_upload_position">位置上传</string>
    <string name="settings_upload_position_period">上传周期(秒)</string>
    <string name="settings_upload_position_period_summary">建议范围：1 – 20 秒，默认为 10 秒</string>
    <string name="settings_device">设备设置</string>
    <string name="settings_update">检查更新</string>
    <string name="settings_about">关于软件</string>
    <string name="settings_logout">退出登录</string>

    <string name="serve_ip">serve_ip</string>
    <string name="serve_port">serve_port</string>

    <string name="series_add">曲线设置</string>
    <string name="series_name">曲线名称</string>
    <string name="series_name_1">曲线名称：</string>
    <string name="series_limit">限值设置</string>
    <string name="series_1">曲线：</string>
    <string name="limit">限值</string>
    <string name="limit_1">限值：</string>
    <string name="add">添加</string>
    <string name="del">删除</string>
</resources>
