<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.hb712.gleak_android.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/settings_general"
        android:title="@string/settings_general" />

    <header
        android:fragment="com.hb712.gleak_android.SettingsActivity$DevicePreferenceFragment"
        android:icon="@drawable/settings_device"
        android:title="@string/settings_device" />

    <header
        android:fragment="com.hb712.gleak_android.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/settings_about"
        android:title="@string/settings_about" />

    <header
        android:id="@+id/checkUpdate"
        android:icon="@drawable/settings_update"
        android:title="@string/settings_update" />

    <header
        android:id="@+id/exitApp"
        android:icon="@drawable/settings_logout"
        android:title="@string/settings_logout" />

</preference-headers>
